# TheIDS3000

./: .env  .gitattributes  .gitignore  README.md  pyproject.toml  report.md  setup.bat  setup.sh
IoT-23-Dataset/CTU-Honeypot-Capture-4-1/: 2018-10-25-14-06-32-192.168.1.132.capinfos  2018-10-25-14-06-32-192.168.1.132.dnstop  2018-10-25-14-06-32-192.168.1.132.passivedns  2018-10-25-14-06-32-192.168.1.132.pcap.xz  README.html  README.json  README.md  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D
IoT-23-Dataset/CTU-Honeypot-Capture-4-1/bro/: index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=D  index.html?C=S;O=A  (+1 more)
IoT-23-Dataset/CTU-Honeypot-Capture-5-1/: 2018-09-21-capture.pcap  README.md  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D
IoT-23-Dataset/CTU-IoT-Malware-Capture-3-1/: index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D
IoT-23-Dataset/CTU-IoT-Malware-Capture-34-1/: 2018-12-21-15-50-14-192.168.1.195.capinfos  2018-12-21-15-50-14-192.168.1.195.dnstop  2018-12-21-15-50-14-192.168.1.195.pcap  README.html  README.md  index.html  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=S;O=A  index.html?C=S;O=D
src/ids3000/: crew.py  main.py
suricata-tcpreplay/: Dockerfile  Readme.md  compose.yaml  parselog.py  services.sh
(+43 files in other folders)
