[project]
name = "ids3000"
version = "0.1.0"
description = "ids3000 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.0,<1.0.0"
]

[project.scripts]
ids3000 = "ids3000.main:run"
run_crew = "ids3000.main:run"
train = "ids3000.main:train"
replay = "ids3000.main:replay"
test = "ids3000.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
